--- a/web design/connections.html
+++ b/web design/connections.html
@@ -1,21 +1,31 @@
 <head>
  <style>
 
-   body {
-      background-image: url('minecraft.jpg');
+   @font-face{
+           font-family: fortnite;
+       src: url(BurbankBigCondensed-Black.otf);
+      }
+
+      body {
+         background-image: url('fatman.jpg');
+         background-size: cover;
+         background-attachment: fixed;
+         background-repeat: none;
+         font-family: fortnite;
+         font-size: 25pt;
+         color: #1AF4D9;
 
    }
 
    h1 {
-        font-family: ComicsansMS;
+        font-family: fortnite;
         color: lightblue;
-        background-color: #757372;
         text-align: left;
         font-size: 30pt;
    }
 
    p {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -23,9 +33,8 @@
    }
 
    h3 {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        color: lightblue;
-       background-colour: #757372;
        text-align: left;
        font-size: 30pt;
 
@@ -33,7 +42,7 @@
 
 
    p {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -41,22 +50,21 @@
    }
 
    h3 {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        colour: lightblue;
-       background-colour: #757372;
        text-align: left;
        font-size: 30pt;
    }
 
   div {
-     font-family: ComicsansMS;
-     background-color: #73706e;
+     font-family: fortnite;
+     background-color: rgba(220,26,244,0.3);
      width:700px;
      margin-left: auto;
      margin-right: auto;
      padding: 20px;
-     border: 10px solid lightblue;
-     box-shadow: 10px 10px 20px lightblue;
+     border: 10px solid #1AADF4;
+     box-shadow: 10px 10px 20px #1AADF4;
    }
 
 </style>
@@ -64,36 +72,24 @@
 
 <div>
 <body>
-<h1>MINECRAFT.INC: Quick intro</h1>
+<h1>my personal connections...</h1>
 
-<img src="max.jpg" height="400"/>
+<img src="green.jpg" height="400"/>
 
-<p>The game minecraft was first created by Swedish developer <a href="https://en.wikipedia.org/wiki/Markus_Persson">"Markus Persson"</a>, or known by Notch in the game and it's community. It was then released by
-  <a href="https://www.mojang.com/?sa=X&ved=2ahUKEwjzir7Z9p_lAhUQbBoKHciLAZsQ9QEwGnoECAYQCA">Mojang</a> in 2011. The game was purchased by microsoft in 2014 and became the best selling game of all time! it was simply the game with the most creativity and freedom of all time! selling more than 180 million copies across all platforms in 2019! </p>
+<p>The game fortnite always is my favourite game. it had my favourite style, animal, and friends to play around with! i begain fortnite the first day it came out and was playing it all the way now! i really enjoyed it and made lots of memories wiht frineds that are now in a different school. when i begain taking it abit more seriously, i got myself a PC wiht my money and tried out for a tournament last summer! i turned out winning 500$ off of it. but when my parents knew they were abit edgy about it. thry think that if i can earn money from that then i can do it as a job. But my dream isn't a pro fortnite player. i want to be a scientist and gaming is just a small part of my life, so imma just keep it that way.</p>
 
-<h3>Fun Fact!:</h3>
-
-<ul>
-  <li>The first fun fact is about creepers! Did you know that the creepers weren't meant to be in the game? the developers accidentally coded pigs into a currupted ball of codes and eventually the machine it self made the pig into creepers. in other words, the creepers were created by an AI! </li>
-  <li>Did you know that the first version of Minecraft was created in just six days!</li>
-  <li>Now, saving the best for the last, did you know that the enderman language is actually english in reverse? </li>
-
-<h3>The nerdy tricks...</h3>
+<h3>my own highlights:</h3>
 
 <ul>
-	<li>You can actually obtain a dragon egg by pushing it into a piston! </li>
-	<li>if you catch fish in rain it's way faster and easier!</li>
-	<li>an egg has a 1/256 chance of hatching 4 chickens at once!</li>
-</ul>
+  <li>Won some money from the world cup sitting st home...</li>
+  <li>I stayed for the best mobile player on fortnite for a day!</li>
+  <li>i emailed fortnite to make a skin for ninja and after a year or so they email back telling me that they are working on onr for NINJA and thanked me for my reccomendation! (it was also ceccomended by alot more people... i was just one of them.)</li>
 
-<h1> MEET THE CREEPER...</h1>
-<img src="creeper.jpg" height="350"/>
-
-<h1>what it looks like in game...</h1>
-<img src="dylan.jpg" height="350"/>
+<h1>my signature skin...(the skin that i always use...)</h1>
+<img src="omega2.jpg" height="350"/>
 
 <p> Here is a
-  <a href="https://www.minecraft.net/en-us/">lit link</a>. on more info for MINECRAFT!</p>
+  <a href="https://www.youtube.com/watch?v=g7_oK9uZ9oo">showcase video</a>on the skin i love!</p>
 
 </div>
 </body>
