--- a/web design/firstglance.html
+++ b/web design/firstglance.html
@@ -1,21 +1,31 @@
 <head>
  <style>
 
-   body {
-      background-image: url('groot.jpg');
+@font-face{
+        font-family: fortnite;
+    src: url(BurbankBigCondensed-Black.otf);
+   }
 
+   body {
+      background-image: url('forrtnite2.jpg');
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: none;
+      font-family: fortnite;
+      font-size: 25pt;
+      color: orange;
    }
 
    h1 {
-        font-family: Chalkduster;
-        color: darkgreen;
-        background-color: #826951;
+        font-family: fortnite;
+        color: white;
+        background-color: #ff7400;
         text-align: left;
         font-size: 30pt;
    }
 
    p {
-       font-family: Chalkduster;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -23,9 +33,9 @@
    }
 
    h3 {
-       font-family: Chalkduster;
-       color: darkgreen;
-       background-colour: #826951;
+       font-family: fortnite;
+       color: white;
+       background-colour: #ff7400;
        text-align: left;
        font-size: 30pt;
 
@@ -33,7 +43,7 @@
 
 
    p {
-       font-family: Chalkduster;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -41,22 +51,22 @@
    }
 
    h3 {
-       font-family: Chalkduster;
-       colour: blue;
-       background-colour: #826951;
+       font-family: fortnite;
+       colour: white;
+       background-colour: #ff7400;
        text-align: left;
        font-size: 30pt;
    }
 
   div {
-     font-family: Chalkduster;
-     background-color: #826951;
+     font-family: fortnite;
+     background-color: rgba(242,96,82, 0.3);
      width:700px;
      margin-left: auto;
      margin-right: auto;
      padding: 20px;
-     border: 10px solid black;
-     box-shadow: 10px 10px 20px darkgreen;
+     border: 10px solid darkred;
+     box-shadow: 10px 10px 20px darkorange;
    }
 
 </style>
@@ -66,54 +76,36 @@
 
 <body>
 
-<h1>GROOT.INC</h1>
+<h1>So uh... FORTNITE</h1>
 
-<p>i am groot. i am groot i am groot i am grooti am grooti am grooti am grooti am grooti am grooti,
-	 am groot i am groot ,i am grooti am grooti am groot i am groot, i am groot i am groot i am groot! i am groot
-   i am groot i am groot i am groot i am groot ,i am groot i am groot i am groot i am groot i am groot
-   i am groot i am groot i am groot ,i am groot i am groot i am groot. i am groot i am groot i am groot ,i am groot
-   i am groot i am groot i am groot .i am groot i am groot i am groot i am groot ,i am groot i am groot i
-    am groot. i am groot i am groot ,i am groot i am groot</p>
+<p>Yes ladies and gentlemen... Fortnite is a massive multiplayer online video game released in July 2017, developed by Epic Games. The game includes two different game modes released as early access: Save the World and Battle Royale.
+Fortnite Battle Royale is the free 100-player PvP mode in Fortnite. One giant map, a battle bus, Fortnite building skills and destructible environments combined with intense PvP combat while the last one standing wins; and Save the World is a cooperative shooter-survival game with up to 4-man squad to fight off husks and defend mission objectives with fortifications and defenses.
+</p>
 
-<p>i am groot, i am groot i am groot i am groot i am groot. i am groot i am groot, i am grooti am grooti
-	am groti am grooti am groot. i am grooti am grooti am groot i am groot,i am grooti am grooti am
-	grooti am grooti am groot. i am groot i am groot i am groot, i am groot i am groot i am groot i am groot i am groot
-   i am groot i am groot i am groot i am groot i am groot i am groot.</p>
+<h3>The avalability of the game:</h3>
 
-<h3>GOOD GROOT... I AM GROOT:</h3>
+	<li>It is avalable now on all consels.</li>
 
-	<li>i am groot, i am groot i am groot i am groot i am groot. i am groot i am groot
-  ,i am groot i am groot. i am groot i am groot i am groot, i am groot i am groot i
-  i am groot i am groot.</li>
+	<li>Avalable on PC.</li>
 
-	<li>i am groot i am groot i am groot, i am groot i am groot i am groot
-  i am groot i am groot. i am groot i am groot, i am groot i am groot i am groot.
-  i am groot i am groot, i am groot i am groot i am groot.</li>
+	<li>Also on mobile!</li>
 
-	<li>i am groot i am groot i am groot, i am groot i am groot i am groot. i am groot i am groot i am groot
-  i am groot, i am groot .i am groot i am groot ,i am groot i am groot i am groot.</li>
-
-<h3>BAD GROOT... I AM GROOT.</h3>
+<h3>so uhhh why is it so famouse?.</h3>
 
 <ul>
-	<li>i am groot i am groot i am groot i am groot i am groot
-  am groot i am groot i am groot  i am groot i am groot i am groot i am groot i
-  am groot i am groot i am groot i am groot i am grooti am groot i am groot</li>
+	<li>It's first because of the simple but agile designe of the game! it's not only a game but simply a peace of art!</li>
 
-	<li>i am groot i am groot i am groot i am groot i am groot i am groot i am groot i am groot
-  i am groot i am groot i am groot i am groot i am groot i am groot </li>
+	<li>The second reason is because of the game modes and it's adaptivity. the modes create various ways to play there fore making the game more "open". the adaptivity of the game is because it uses modern real world cosmetics to put it in the game and call that a thing! So that makes people relate and make connections therefore making the game unique and a lifestyle.</li>
 
-	<li>i am groot i am groot i am groot i am groot i am groot i am groot i am groot
-  i am groot i am groot i am groot i am groot i am groot i am groot i am groot
-  i am groot i am groot</li>
+	<li>third and the most obvious of all are the celeberties! Ninja, Dr.lupo, Tim the tat man... all these pro players went and made fortnite as popular as possible. people begain to watch their well made streams and sponsers then after a while new streamers came and more people started playing! and that is the mojor part how fortnite got sooo popular throught it's career as a game!</li>
 </ul>
 
-<h1> MR.GROOT.</h1>
+<h1>Here's my boy ninja...</h1>
 
-<img src="YEET.jpg" height="400"/>
+<img src="ninja.jpg" height="400"/>
 
-<p> I am groot, i am goot
-  <a href="https://www.marvel.com/characters/groot">i am groot</a>. i am groot, i am groot...</p>
+<p> Here is a cool website all on
+  <a href="https://www.marvel.com/characters/groot">fortnite</a>! Hope you like it!</p>
 
 </div>
 </body>
