--- a/web design/gameplay.html
+++ b/web design/gameplay.html
@@ -1,21 +1,31 @@
 <head>
  <style>
 
+   @font-face{
+         font-family: fortnite;
+     src: url(BurbankBigCondensed-Black.otf);
+   }
+
    body {
-      background-image: url('minecraft.jpg');
+      background-image: url('fortnite3.jpg');
+      background-size: cover;
+      background-attachment: fixed;
+      background-repeat: none;
+      font-family: fortnite;
+      font-size: 25pt;
+      color: brown;
 
    }
 
    h1 {
-        font-family: ComicsansMS;
-        color: lightblue;
-        background-color: #757372;
+        font-family: fortnite;
+        color: brown;
         text-align: left;
         font-size: 30pt;
    }
 
    p {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -23,9 +33,8 @@
    }
 
    h3 {
-       font-family: ComicsansMS;
-       color: lightblue;
-       background-colour: #757372;
+       font-family: fortnite;
+       color: brown;
        text-align: left;
        font-size: 30pt;
 
@@ -33,7 +42,7 @@
 
 
    p {
-       font-family: ComicsansMS;
+       font-family: fortnite;
        line-height: 2em;
        text-indent: 30px;
        margin-bottom: 60px;
@@ -41,22 +50,20 @@
    }
 
    h3 {
-       font-family: ComicsansMS;
-       colour: lightblue;
-       background-colour: #757372;
-       text-align: left;
+       font-family: fortnite;
+       colour: brown;
        font-size: 30pt;
    }
 
   div {
-     font-family: ComicsansMS;
-     background-color: #73706e;
+     font-family: fortnite;
+     background-color: rgba(182,92,0, 0.5);
      width:700px;
      margin-left: auto;
      margin-right: auto;
      padding: 20px;
-     border: 10px solid lightblue;
-     box-shadow: 10px 10px 20px lightblue;
+     border: 10px solid darkgreen;
+     box-shadow: 10px 10px 20px green;
    }
 
 </style>
@@ -64,36 +71,32 @@
 
 <div>
 <body>
-<h1>MINECRAFT.INC: Quick intro</h1>
+<h1>Fortnite how to play:</h1>
 
-<img src="max.jpg" height="400"/>
+<img src="ingame.jpg" height="390"/>
 
-<p>The game minecraft was first created by Swedish developer <a href="https://en.wikipedia.org/wiki/Markus_Persson">"Markus Persson"</a>, or known by Notch in the game and it's community. It was then released by
-  <a href="https://www.mojang.com/?sa=X&ved=2ahUKEwjzir7Z9p_lAhUQbBoKHciLAZsQ9QEwGnoECAYQCA">Mojang</a> in 2011. The game was purchased by microsoft in 2014 and became the best selling game of all time! it was simply the game with the most creativity and freedom of all time! selling more than 180 million copies across all platforms in 2019! </p>
+<p>The game is simple! basically you would try to build and shoot other players! think of it as cartoon pubg wherer you can build and basically destroy everything with pickaxes. if you want the more detailed version<a href="https://www.wikihow.com/Play-Fortnite">"of the game"</a> clike on the highlighted words and it would take you there. </p>
 
-<h3>Fun Fact!:</h3>
-
-<ul>
-  <li>The first fun fact is about creepers! Did you know that the creepers weren't meant to be in the game? the developers accidentally coded pigs into a currupted ball of codes and eventually the machine it self made the pig into creepers. in other words, the creepers were created by an AI! </li>
-  <li>Did you know that the first version of Minecraft was created in just six days!</li>
-  <li>Now, saving the best for the last, did you know that the enderman language is actually english in reverse? </li>
-
-<h3>The nerdy tricks...</h3>
+<h3>The controlles?</h3>
 
 <ul>
-	<li>You can actually obtain a dragon egg by pushing it into a piston! </li>
-	<li>if you catch fish in rain it's way faster and easier!</li>
-	<li>an egg has a 1/256 chance of hatching 4 chickens at once!</li>
-</ul>
+  <li>On mobile, you would need to use the joysticks and other buttons to build and play the game. there was memes about fortnite mobile players and how they are so bad at the game. but as technology grew now, fortnite mobile players dominate and could possibly compete in the world cup running 120 fps!</li>
+  <li>On consels you would use your usual controller and play the game in your own button binds. pretty easy and usual for normal gamers.</li>
+  <li>Now, saving the best for the last, PC players are ones that dominate from the birth of fortnite till now! they could do cool edits and other fancy tricks! the controlles are the same to other shooters but you would need to get used to the building tactics! </li>
 
-<h1> MEET THE CREEPER...</h1>
-<img src="creeper.jpg" height="350"/>
+<h1> All the controlls in different divices...</h1>
 
-<h1>what it looks like in game...</h1>
-<img src="dylan.jpg" height="350"/>
+<li>IOS </li>
+<img src="mobile.jpg" height="350"/>
+
+<li>PC</li>
+<img src="PC.jpg" height="350"/>
+
+<li>Consels</li>
+<img src="controller.jpg" height="350"/>
 
 <p> Here is a
-  <a href="https://www.minecraft.net/en-us/">lit link</a>. on more info for MINECRAFT!</p>
+  <a href="https://www.youtube.com/watch?v=zGXv4Be_s20">video</a> on how to play fortnite!</p>
 
 </div>
 </body>
