--- a/web design/gallery.html
+++ b/web design/gallery.html
@@ -1,62 +1,19 @@
 <head>
  <style>
 
-   body {
-      background-image: url('minecraft.jpg');
+   @font-face{
+           font-family: fortnite;
+       src: url(BurbankBigCondensed-Black.otf);
+      }
 
-   }
-
-   h1 {
-        font-family: ComicsansMS;
-        color: lightblue;
-        background-color: #757372;
-        text-align: left;
-        font-size: 30pt;
-   }
-
-   p {
-       font-family: ComicsansMS;
-       line-height: 2em;
-       text-indent: 30px;
-       margin-bottom: 60px;
-
-   }
-
-   h3 {
-       font-family: ComicsansMS;
-       color: lightblue;
-       background-colour: #757372;
-       text-align: left;
-       font-size: 30pt;
-
-   }
-
-
-   p {
-       font-family: ComicsansMS;
-       line-height: 2em;
-       text-indent: 30px;
-       margin-bottom: 60px;
-
-   }
-
-   h3 {
-       font-family: ComicsansMS;
-       colour: lightblue;
-       background-colour: #757372;
-       text-align: left;
-       font-size: 30pt;
-   }
-
-  div {
-     font-family: ComicsansMS;
-     background-color: #73706e;
-     width:700px;
-     margin-left: auto;
-     margin-right: auto;
-     padding: 20px;
-     border: 10px solid lightblue;
-     box-shadow: 10px 10px 20px lightblue;
+      body {
+         background-image: url('llama.jpg');
+         background-size: cover;
+         background-attachment: fixed;
+         background-repeat: none;
+         font-family: fortnite;
+         font-size: 25pt;
+         color: #1AF4D9;
    }
 
 </style>
@@ -64,36 +21,22 @@
 
 <div>
 <body>
-<h1>MINECRAFT.INC: Quick intro</h1>
+<h1>FORTNITE GALLERY</h1>
 
-<img src="max.jpg" height="400"/>
+<img src="art.jpg" height="400"/>
 
-<p>The game minecraft was first created by Swedish developer <a href="https://en.wikipedia.org/wiki/Markus_Persson">"Markus Persson"</a>, or known by Notch in the game and it's community. It was then released by
-  <a href="https://www.mojang.com/?sa=X&ved=2ahUKEwjzir7Z9p_lAhUQbBoKHciLAZsQ9QEwGnoECAYQCA">Mojang</a> in 2011. The game was purchased by microsoft in 2014 and became the best selling game of all time! it was simply the game with the most creativity and freedom of all time! selling more than 180 million copies across all platforms in 2019! </p>
+<img src="yyyeeettt.jpg" height="350"/>
 
-<h3>Fun Fact!:</h3>
+<img src="yyeett.jpg" height="350"/>
 
-<ul>
-  <li>The first fun fact is about creepers! Did you know that the creepers weren't meant to be in the game? the developers accidentally coded pigs into a currupted ball of codes and eventually the machine it self made the pig into creepers. in other words, the creepers were created by an AI! </li>
-  <li>Did you know that the first version of Minecraft was created in just six days!</li>
-  <li>Now, saving the best for the last, did you know that the enderman language is actually english in reverse? </li>
+<img src="mmaaxx.jpg" height="350"/>
 
-<h3>The nerdy tricks...</h3>
+<img src="yes.jpg" height="350"/>
 
-<ul>
-	<li>You can actually obtain a dragon egg by pushing it into a piston! </li>
-	<li>if you catch fish in rain it's way faster and easier!</li>
-	<li>an egg has a 1/256 chance of hatching 4 chickens at once!</li>
-</ul>
+<img src="new.jpg" height="350"/>
 
-<h1> MEET THE CREEPER...</h1>
-<img src="creeper.jpg" height="350"/>
-
-<h1>what it looks like in game...</h1>
-<img src="dylan.jpg" height="350"/>
-
-<p> Here is a
-  <a href="https://www.minecraft.net/en-us/">lit link</a>. on more info for MINECRAFT!</p>
+<p> Here is a shoutout for
+  <a href="https://www.youtube.com/user/lenpelletier">Mr.pelltier</a>for helping and creating this website with Grant.inc! Make sure to subscribe to him!</p>
 
 </div>
 </body>
